package io.hohichh.planning_assistant.enums;

public enum TaskStatus {
    ACTIVE,
    COMPLETED,
    ARCHIVED
}
